# obquit

./: PKGBUILD  README.md  obquit.py  pyproject.toml  setup.cfg  setup.py
data/: obquit  obquit.conf
obquit/: __init__.py
src/: obquit.py
src/obquit/: __init__.py
