[metadata]
name = obquit
version = 0.1
author = Dino Duratović
author_email = dinomol@mail.com
url = https://github.com/dglava/obquit
description = Shutdown/reboot/logout utility script
license = GPL3
license_files = LICENSE

[options]
install_requires =
    PyGObject
    pycairo

[options.entry_points]
console_scripts =
    obquit = obquit:run
